--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-react-hooks": "^5.0.0-next-2cf4352e1-20221011",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
