--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^3.9.1",
     "eslint-plugin-react-hooks": "^5.0.0-next-2cf4352e1-20221011",
     "firebase": "^9.12.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-confetti": "^6.1.0",
