--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bad-words": "^3.0.4",
     "chart.js": "^3.9.1",
     "eslint-plugin-react-hooks": "^5.0.0-next-2cf4352e1-20221011",
     "firebase": "^9.12.1",
